# clickfix-api

./: .env  app.py  bot.py  config.py  main.py  pyproject.toml  render.yaml  requirements.txt  requirementss.txt  test.py  text.py  web.py
clickfix-api/: .env  app.py  render.yaml
handlers/: __int__.py  create_link.py  pay.py  start.py  test.py
