[tool.poetry]
name = "clickfix-api"
version = "0.1.0"
description = "Telegram bot with Razorpay integration"
authors = ["sanjai <sanjai68140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.0.0b7"
aiohttp = "3.8.5"
python-dotenv = "1.0.0"
razorpay = "1.4.2"
requests = "2.32.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
